kubernetes/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    # Traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # ExternalDNS
    external-dns.alpha.kubernetes.io/hostname: uptime-kuma.homelab.jonasg.be
    # cert-manager
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - uptime-kuma.homelab.jonasg.be
    secretName: uptime-kuma-tls
  rules:
  - host: uptime-kuma.homelab.jonasg.be
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
